--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2019" />
-    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -19,7 +19,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -28,15 +28,15 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
+                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
+                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
+                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -45,7 +45,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Abbiamo bevuto troppo <span>:)</span></h1>
             <p>Non sappiamo dove sia la pagina che cerchi.</p>
-            <a href="http://www.beerstrot.it" class="left">&larr; Torna a casa</a>
+            <a href="https://www.beerstrot.it" class="left">&larr; Torna a casa</a>
         </div>
     </div>
     <!-- inizio footer -->
@@ -128,18 +128,18 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://www.beerstrot.it">Home</a>
-                <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a>
-                <a href="http://www.beerstrot.it/social/">Social</a>
-                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
-                <a href="http://www.beerstrot.it/blog/">Blog</a>
+                <a href="https://www.beerstrot.it">Home</a>
+                <a href="https://www.beerstrot.it/menu/">Menù</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/social/">Social</a>
+                <a href="https://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="https://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://www.beerstrot.it/js/app.min.js"></script>
+    <script src="https://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
