--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 	<meta name="twitter:site" content="@beerstrot"/>
 	<meta name="twitter:title" content="Specialisti in Hamburger Goduriosi"/>
 	<meta name="twitter:description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
-	<meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
-	<meta name="twitter:url" content="http://www.beerstrot.it"/>
+	<meta name="twitter:image" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
+	<meta name="twitter:url" content="https://www.beerstrot.it"/>
 	<meta property="fb:app_id" content="1549149915357715"/>
-	<meta property="og:url" content="http://www.beerstrot.it"/>
+	<meta property="og:url" content="https://www.beerstrot.it"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Specialisti in Hamburger Goduriosi"/>
 	<meta property="og:description" content="Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona"/>
-	<meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
-	<link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
-	<link rel="canonical" href="http://www.beerstrot.it"/>
-	<link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
+	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/background-home.jpg"/>
+	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
+	<link rel="canonical" href="https://www.beerstrot.it"/>
+	<link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -49,7 +49,7 @@
 	<nav class="top-bar" data-topbar role="navigation">
 		<ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
 			<li class="name">
-				 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+				 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
 			</li>
 			<li class="toggle-topbar menu-icon">
 				<a href="#"><span></span></a>
@@ -58,15 +58,15 @@
 		<section class="top-bar-section">
 			<ul class="right">
 				<li class="divider"></li>
-				<li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
+				<li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
 				<li class="divider"></li>
-				<li><a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+				<li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
 				<li class="divider"></li>
-				<li><a href="http://www.beerstrot.it/social/">Social</a></li>
+				<li><a href="https://www.beerstrot.it/social/">Social</a></li>
 				<li class="divider"></li>
-				<li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
+				<li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
 				<li class="divider"></li>
-				<li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
+				<li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
 			</ul>
 		</section>
 	</nav>
@@ -115,13 +115,13 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 large-6 medium-push-6 large-push-6 columns">
-				<a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
+				<a role="button" href="https://www.beerstrot.it/menu/"><img src="https://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<p>Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona.</p>
 				<p>Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
 				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità, non disdegnando eccellenze tedesche di nicchia come Zotler e Mariahilfer.</p>
-				<a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
+				<a itemprop="menu" role="button" href="https://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
 			</div>
 		</div>
 	</div>
@@ -133,12 +133,12 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 large-6 columns">
-				<a role="button" href="http://www.beerstrot.it/asporto/"><img src="http://www.beerstrot.it/asset/img/medium/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
+				<a role="button" href="https://www.beerstrot.it/asporto/"><img src="https://www.beerstrot.it/asset/img/medium/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa sotto i denti?</p>
 				<p>Abbiamo un menù anche per questo.</p>
-				<a role="button" href="http://www.beerstrot.it/asporto/">Scopri il Menù Asporto e Consegne &rarr;</a>
+				<a role="button" href="https://www.beerstrot.it/asporto/">Scopri il Menù Asporto e Consegne &rarr;</a>
 			</div>
 		</div>
 	</div>
@@ -150,13 +150,13 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-				<a role="button" href="http://www.beerstrot.it/social/"><img src="http://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
+				<a role="button" href="https://www.beerstrot.it/social/"><img src="https://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
 			</div>
 			<div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
 				<p>Sei social?</p>
 				<p>Dillo con un hashtag: pubblica le tue foto e video con <code>#cavecchiabeerstrot</code>.</p>
 				<!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
-				<a role="button" href="http://www.beerstrot.it/social/">Guarda le Foto e i Post &rarr;</a>
+				<a role="button" href="https://www.beerstrot.it/social/">Guarda le Foto e i Post &rarr;</a>
 			</div>
 		</div>
 	</div>
@@ -169,7 +169,7 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<div class="flex-video widescreen vimeo extra-space-video">
-					<a role="button" href="http://www.beerstrot.it/video/">
+					<a role="button" href="https://www.beerstrot.it/video/">
 						<iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
 					</a>
 				</div>
@@ -178,7 +178,7 @@
 				<p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
 				<p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
 				<p>Scopri il team di Ca' Vecchia Beerstrot e la location</p>
-				<a role="button" href="http://www.beerstrot.it/contatti/">Contattaci &rarr;</a>
+				<a role="button" href="https://www.beerstrot.it/contatti/">Contattaci &rarr;</a>
 			</div>
 		</div>
 	</div>
@@ -190,11 +190,11 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-				<a role="button" href="http://www.beerstrot.it/blog/"><img src="http://www.beerstrot.it/asset/img/medium/quattro-birre-artigianali-americane.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
+				<a role="button" href="https://www.beerstrot.it/blog/"><img src="https://www.beerstrot.it/asset/img/medium/quattro-birre-artigianali-americane.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
 			</div>
 			<div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
 				<p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
-				<a role="button" href="http://www.beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
+				<a role="button" href="https://www.beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
 			</div>
 		</div>
 	</div>
@@ -278,18 +278,18 @@
 	<div class="row footer">
 		<div class="small-12 medium-12 large-12 columns">
 			<p class="links">
-				<a href="http://www.beerstrot.it">Home</a>
-				<a href="http://www.beerstrot.it/menu/">Menù</a>
-				<a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a>
-				<a href="http://www.beerstrot.it/social/">Social</a>
-				<a href="http://www.beerstrot.it/contatti/">Contatti</a>
-				<a href="http://www.beerstrot.it/blog/">Blog</a>
+				<a href="https://www.beerstrot.it">Home</a>
+				<a href="https://www.beerstrot.it/menu/">Menù</a>
+				<a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+				<a href="https://www.beerstrot.it/social/">Social</a>
+				<a href="https://www.beerstrot.it/contatti/">Contatti</a>
+				<a href="https://www.beerstrot.it/blog/">Blog</a>
 			</p>
 		</div>
 	</div>
 <!-- fine navbar footer-->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-	<script src="http://www.beerstrot.it/js/app.min.js"></script>
+	<script src="https://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
