--- a/menu/cibo/cecilia.html
+++ b/menu/cibo/cecilia.html
@@ -13,17 +13,17 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Hamburger Cecilia"/>
     <meta name="twitter:description" content="Hamburger vegetariano di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
-    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/cecilia.jpg"/>
-    <meta name="twitter:url" content="http://www.beerstrot.it/menu/cibo/cecilia.html"/>
+    <meta name="twitter:image" content="https://www.beerstrot.it/asset/img/large/cecilia.jpg"/>
+    <meta name="twitter:url" content="https://www.beerstrot.it/menu/cibo/cecilia.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://www.beerstrot.it/menu/cibo/cecilia.html"/>
+    <meta property="og:url" content="https://www.beerstrot.it/menu/cibo/cecilia.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Cecilia"/>
     <meta property="og:description" content="Hamburger vegetariano di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
-    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/cecilia.jpg"/>
-    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://www.beerstrot.it/menu/cibo/cecilia.html"/>
-    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
+    <meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/cecilia.jpg"/>
+    <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="https://www.beerstrot.it/menu/cibo/cecilia.html"/>
+    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
 <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -34,7 +34,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h2><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
+                 <h2><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -43,31 +43,31 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://www.beerstrot.it/menu/">Menù</a></li>
+                <li class="active"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="https://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
+                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
+                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/cecilia.jpg" alt="Hamburger Cecilia"/>
+    <img class="image-hero" src="https://www.beerstrot.it/asset/img/large/cecilia.jpg" alt="Hamburger Cecilia"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
                         <h1>Hamburger Cecilia</h1>
-                        <h6 class="by-line">Scritto da <a href="http://www.beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 1 Giugno 2015</h6>
-                        <h6 class="by-line">foto <a href="http://www.beerstrot.it/contatti/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
+                        <h6 class="by-line">Scritto da <a href="https://www.beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 1 Giugno 2015</h6>
+                        <h6 class="by-line">foto <a href="https://www.beerstrot.it/contatti/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
                 </div>
             </header>
@@ -76,7 +76,7 @@
             <h2>Vegetariano</h2>
             <p>Cecilia è un hamburger vegetariano di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p>Gustalo assieme a <a href="http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>
+            <p>Gustalo assieme a <a href="https://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>
         </div>
     </div>
 <!-- fine articolo -->
@@ -90,13 +90,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/menu/cibo/cecilia.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=https://www.beerstrot.it/menu/cibo/cecilia.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/menu/cibo/cecilia.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=https://www.beerstrot.it/menu/cibo/cecilia.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/menu/cibo/cecilia.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=https://www.beerstrot.it/menu/cibo/cecilia.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -108,8 +108,8 @@
     <div class="row">
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://www.beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" class="right">Costine &rarr;</a>
+                <a href="https://www.beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
+                <a href="https://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" class="right">Costine &rarr;</a>
             </div>
         </div>
     </div>
@@ -194,18 +194,18 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://www.beerstrot.it">Home</a>
-                <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a>
-                <a href="http://www.beerstrot.it/social/">Social</a>
-                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
-                <a href="http://www.beerstrot.it/blog/">Blog</a>
+                <a href="https://www.beerstrot.it">Home</a>
+                <a href="https://www.beerstrot.it/menu/">Menù</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/social/">Social</a>
+                <a href="https://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="https://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://www.beerstrot.it/js/app.min.js"></script>
+    <script src="https://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
