--- a/video/index.html
+++ b/video/index.html
@@ -12,20 +12,20 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Il Gusto in Fermento"/>
     <meta name="twitter:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <meta name="twitter:player" content="http://www.beerstrot.it/video/">
+    <meta name="twitter:player" content="https://www.beerstrot.it/video/">
     <meta name="twitter:player:stream" content="https://youtu.be/2_gbVco836c?&autoStart=false"/>
-    <meta name="twitter:url" content="http://www.beerstrot.it/video/"/>
+    <meta name="twitter:url" content="https://www.beerstrot.it/video/"/>
     <meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E1, mp4a.40.2&quot;">
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://www.beerstrot.it/video/"/>
+    <meta property="og:url" content="https://www.beerstrot.it/video/"/>
     <meta property="og:type" content="video.other"/>
     <meta property="og:title" content="Il Gusto in Fermento"/>
     <meta property="og:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/video.jpg"/>
-    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://www.beerstrot.it/video/"/>
-    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
+    <meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/video.jpg"/>
+    <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="https://www.beerstrot.it/video/"/>
+    <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -50,7 +50,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -59,15 +59,15 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
+                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
+                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
+                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -182,18 +182,18 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://www.beerstrot.it">Home</a>
-                <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/asporto/">Asporto e Consegne</a>
-                <a href="http://www.beerstrot.it/social/">Social</a>
-                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
-                <a href="http://www.beerstrot.it/blog/">Blog</a>
+                <a href="https://www.beerstrot.it">Home</a>
+                <a href="https://www.beerstrot.it/menu/">Menù</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/social/">Social</a>
+                <a href="https://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="https://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://www.beerstrot.it/js/app.min.js"></script>
+    <script src="https://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
