--- a/asporto/index.html
+++ b/asporto/index.html
@@ -87,8 +87,9 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
-                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4>
+                <h4>Tutti i giorni: dalle <strong>19:00</strong> alle <strong>20:30</strong></h4>
+                <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
             <div class="medium-6 large-6 columns">
@@ -128,19 +129,15 @@
                         </li>
                         <li>
                             <h3>Olive all'Ascolana &emsp; 5</h3>
-                            <p>il più tipico dei piatti marchigiani</p>
-                        </li>
-                        <li>
-                            <h3>Tacos Chilli &emsp; 5,5</h3>
-                            <p>con carne e fagioli, insalata, salsa allo yogurt</p>
-                        </li>
-                        <li>
-                            <h3>Tacos Vegetariano &emsp; 5,5</h3>
-                            <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
+                            <p>il più tipico street food marchigiano</p>
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte &emsp; 5,5</h3>
-                            <p>servite con salse del Beerstrot</p>
+                            <p>servite con salsa aioli fatta in casa</p>
+                        </li>
+                        <li>
+                            <h3>Polpette Vegetariane &emsp; 5</h3>
+                            <p>polpette impanate di melanzane, zucchine e menta. Servite con salsa tzatziki fatta in casa</p>
                         </li>
                         <li>
                             <h3>Anelli di Cipolla &emsp; 4,5</h3>
@@ -148,7 +145,7 @@
                         </li>
                         <li>
                             <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
-                            <p>servite con salse del Beerstrot</p>
+                            <p>servite con salsa alla senape fatta in casa</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>
@@ -174,16 +171,16 @@
                             <p>manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Primavera &emsp; 8,9 / doppio 14,9</h3>
-                            <p>manzo, composta di feta, pomodorini e timo; insalata riccia</p>
+                            <h3>Greco &emsp; 8,9 / doppio 14,9</h3>
+                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
                         </li>
                         <li>
                             <h3>Cacio e Pepe &emsp; 10,5 / doppio 14,9</h3>
                             <p>manzo, pecorino vallesina, guanciale, pepe</p>
                         </li>
                         <li>
-                            <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, uovo all’occhio di bue, fontina, bacon croccante, insalata</p>
+                            <h3>Estivo &emsp; 10,5 / doppio 14,9</h3>
+                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli.</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
@@ -200,9 +197,9 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Hamburger Vegetariani e di Pesce<br><small>Burger vegetariani e di pesce di nostra produzione. Serviti con patate fritte.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                        <li>
+                          <li>
                             <h3>Vegetariano Fagioli &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di bietole</p>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di cicoria</p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa &emsp; 8,9</h3>
@@ -231,10 +228,10 @@
                             <h3>Tagliata di Picanha &emsp; 19</h3>
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
-                        <li>
+<!--                         <li>
                             <h3>Cotoletta alla Milanese &emsp; 21</h3>
                             <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -249,11 +246,11 @@
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
-                                <p>stile new york</p>
+                                <p>cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
                             </li>
                             <li>
-                                <h3>Dolceburger &emsp; 6</h3>
-                                <p>pan brioche ripieno di crema al caffè e cioccolato croccante, servito con delicato zabaione</p>
+                                <h3>Blondie &emsp; 5</h3>
+                                <p>brownie con nocciole, servito con mousse di crema chantilly.</p>
                             </li>
                         </ul>
                     </div>
@@ -357,7 +354,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Aperto tutti i giorni <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
