--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
-				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
+				<p>Aperto tutti i giorni: dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<h2>Asporto e Consegne</h2>
-				<p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
-				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
+				<p>Tutti i giorni: dalle <strong>19:00</strong> alle <strong>20:30</strong></p>
+				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
+				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
 			</div>
 		</div>
 		<div class="row">
@@ -212,7 +213,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Aperto tutti i giorni <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
