update consegna a domicilio

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
 				<p>Aperto tutti i giorni: dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
 			</div>
 			<div class="medium-6 large-6 columns">
-				<h2>Asporto e Consegne</h2>
-				<p>Tutti i giorni: dalle <strong>19:00</strong> alle <strong>20:30</strong></p>
+				<h2>Asporto</h2>
+				<p>Tutti i giorni: dalle <strong>19:00</strong> alle <strong>20:00</strong></p>
+				<p>Il servizio di consegna a domicilio riprenderà dal 15 Settembre</p>
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
 				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
 			</div>
