--- a/asporto/indexconsegne.html
+++ b/asporto/indexconsegne.html
@@ -73,15 +73,15 @@
 <!-- fine navbar con hamburger -->
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
-            <!-- <div class="small-12 columns">
+            <div class="small-12 columns">
                 <h1 class="text-highlight" itemprop="description">Hamburger a casa tua.<br>Caldo, in meno di 30 minuti.</h1>
-            </div> -->
+            </div>
         </div>
     </header>
     <div class="panel-asporto">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporto</h1>
+                <h1>Asporto e Consegne a Domicilio</h1>
                 <hr>
             </div>
         </div>
@@ -94,7 +94,8 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Servizio consegna a domicilio:</strong> riprenderà il 15 Settembre</h4>
+                <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
+                <h4>Effettuiamo le consegne a Filottrano, Sant'Ignazio, Imbrecciata, Montoro e San Biagio.</h4>
             </div>
         </div>
         <div class="row">
