--- a/menu/index.html
+++ b/menu/index.html
@@ -128,8 +128,8 @@
                             <p>servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
-                            <h3>Polpette Vegetariane &emsp; 5</h3>
-                            <p>polpette impanate di melanzane, zucchine e menta. Servite con salsa tzatziki fatta in casa</p>
+                            <h3>Ratatouille &emsp; 4,55</h3>
+                            <p>Verdura fresca tagliata a dadi e cotta al forno</p>
                         </li>
                         <li>
                             <h3>Anelli di Cipolla &emsp; 4,5</h3>
