--- a/asporto/index.html
+++ b/asporto/index.html
@@ -87,14 +87,14 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4>Tutti i giorni: dalle <strong>19:00</strong> alle <strong>20:00</strong></h4>
+                <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Servizio consegna a domicilio:</strong> riprenderà il 15 Settembre</h4>
+                <h4><strong>Servizio consegna a domicilio:</strong> riprenderà il 15 Ottobre</h4>
             </div>
         </div>
         <div class="row">
@@ -284,7 +284,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Aperto tutti i giorni <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
