--- a/menu/index.html
+++ b/menu/index.html
@@ -75,7 +75,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
-            <p>Aperto tutti i giorni: dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
+            <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
         </div>
     </header>
         <div class="row">
@@ -461,7 +461,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Aperto tutti i giorni <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
